recursion.cons.length.Length.scala.error
Compilation error:
Length:5: error: not found: value list
  return list.tail
         ^