recursion.cons.length.Length.scala.code
def length(l:List[Int]): Int = {
  if (l.head == 0)
  return 0
  return list.tail
}